# lichen

./: .gitignore  AUTORESEARCH_PROMPT.md  CHANGES.md  Cargo.toml  HYPOTHESES.md  README.md  REFACTOR_PROMPT.md  demo_onchain_events.sh  lichen-economy-rounds-bankroll.jsonl  lichen-economy-rounds-marketplace.jsonl  lichen-economy-rounds-onchain.jsonl  lichen-economy-rounds-stationary.jsonl  lichen-economy-summary-bankroll.md  lichen-economy-summary-marketplace.md  lichen-economy-summary-stationary.md  run-autoresearch.sh
agent/: Cargo.toml
agent/src/: agent.rs  lib.rs  llm.rs  main.rs  polling.rs
contracts/: README.md  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: LichenCoordinator.sol
contracts/test/: LichenCoordinator.t.sol
coordinator/: Cargo.toml
coordinator/src/: coordinator.rs  handlers.rs  main.rs  scoring.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  backend.rs  cli.rs  lib.rs  llm.rs  main.rs  polling.rs  subscription.rs
crates/agent/tests/: e2e.rs  subscription_integration.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: backend.rs  cli.rs  coordinator.rs  handlers.rs  lib.rs  main.rs  notifier.rs  scoring.rs  watcher.rs
crates/coordinator/tests/: api.rs
crates/onchain/: Cargo.toml
crates/onchain/abi/: LichenCoordinator.json
crates/onchain/src/: lib.rs
crates/onchain/tests/: integration.rs
crates/protocol/src/: lib.rs  scoring.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: main.rs  marketplace.rs  payouts.rs  scenarios.rs
docs/: BTS.md  experiment-results-2026-02-27.md  implementation-plan-open-marketplace.md
output/: lichen-economy-comparison.md  lichen-economy-rounds-gemini31p.jsonl  lichen-economy-rounds-gpt41.jsonl  lichen-economy-rounds-onchain.jsonl  lichen-economy-rounds-sonnet46.jsonl  lichen-economy-summary-gpt41.md  lichen-economy-summary-onchain.md  lichen-economy-summary-sonnet46.md
output/hypotheses/: RUNBOOK.md  STATE.json
protocol/: Cargo.toml
protocol/src/: lib.rs
