[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
client = { path = "../client" }
onchain = { path = "../onchain" }
alloy = { version = "1.7", default-features = false, features = ["sol-types"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"

[dev-dependencies]
coordinator = { path = "../coordinator" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
