[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
onchain = { path = "../onchain" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
rand = "0.8"
alloy = { version = "1.7", features = ["signers"] }
sha2 = "0.10"
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
client = { path = "../client" }
