[package]
name = "onchain"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
alloy = { version = "1.7", features = [
    "sol-types",
    "contract",
    "provider-http",
    "signer-local",
    "network",
    "node-bindings",
] }
eyre = "0.6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
serde_json = "1"
