[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
onchain = ["dep:onchain", "dep:alloy"]

[dependencies]
protocol = { path = "../protocol" }
agent = { path = "../agent" }
onchain = { path = "../onchain", optional = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
alloy = { version = "1.7", optional = true, features = [
    "sol-types",
    "contract",
    "provider-http",
    "signer-local",
    "network",
    "node-bindings",
] }
futures = "0.3"
